Add HealthScore Bureau MVP dashboard and user features
Initial implementation of the HealthScore Bureau frontend MVP. Adds new dashboard, users, alerts, and reports pages with mock authentication, protected routes, and localStorage data management. Introduces reusable components (SummaryCard, GaugeCard, RiskChart, RecentTable, AddUserModal, UploadUsersModal), mock data, and hooks for user management. Cleans up unused pages and menu items, updates routing, and revises project metadata and documentation (README, IMPLEMENTATION_SUMMARY.md, USER_GUIDE.md, index.html). Adds dependencies for data visualization (react-circular-progressbar, recharts).

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-  <title>Health score Dashboard</title>
+  <title>HealthScore Bureau - Health Analytics Dashboard</title>
   <link rel="icon" href="/favicon.svg" />
 
   <!-- Meta Tags-->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#1677ff" />
-  <meta name="title" content="Mantis - React Admin Dashboard Template by CodedThemes" />
+  <meta name="theme-color" content="#0070C0" />
+  <meta name="title" content="HealthScore Bureau - Health Analytics Dashboard" />
   <meta name="description"
-    content="Start your next React project with Mantis admin template. It build with Reactjs, Material-UI, SWR, and Hook for faster web development." />
+    content="HealthScore Bureau is a comprehensive health analytics platform that calculates weighted health scores and provides actionable insights for better health management." />
   <meta name="keywords"
-    content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template" />
-  <meta name="author" content="CodedThemes" />
+    content="health score, health analytics, wellness dashboard, health metrics, health tracking, health assessment" />
+  <meta name="author" content="HealthScore Bureau" />
   <link rel="apple-touch-icon" href="/logo192.png" />
 
   <!-- Performance hints for Vite -->
@@ -27,8 +27,6 @@
 
   <!-- this is to resolve issue in old safari browser in tablet -->
   <script src="https://cdn.jsdelivr.net/npm/resize-observer-polyfill@1.5.1/dist/ResizeObserver.min.js"></script>
-  <!-- Buy Now  -->
-  <script defer="" src="https://fomo.codedthemes.com/pixel/Oo2pYDncP8R8qhhETpWKGA04b8jPhUjF"></script>
 </head>
 
 <body>
